--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Help Hub</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/js/main.js">
+  <link rel="stylesheet" href="package.json">
 </head>
 
 <body>
@@ -120,6 +123,7 @@
       </div>
     </div>
   </nav>
+
   <section class="hero">
     <div class="container">
       <div class="row">
@@ -196,9 +200,12 @@
         <div class="col-lg-5">
           <div class="what-we-right box-shadow-we p-5">
             <h5 class="we-right-title">What We Do</h5>
-            <p class="we-right-text text-nowrap">Small Donations Make Big <br> Impact on Someone’s <br> Life, Act Today!</p>
+            <p class="we-right-text text-nowrap">Small Donations Make Big <br> Impact on Someone’s <br> Life, Act Today!
+            </p>
             <div class="we-line mb-2"></div>
-            <p class="we-right-text-down text-nowrap">Cras sed felis eget velit aliquet sagittis id consectetur purus. <br> Volutpat commodo sed egestas egestas.</p>
+            <p class="we-right-text-down text-nowrap">Cras sed felis eget velit aliquet sagittis id consectetur purus.
+              <br> Volutpat commodo sed egestas egestas.
+            </p>
 
             <div class="we-icons-left d-flex">
               <div class="d-flex pe-4">
@@ -237,20 +244,199 @@
             <div class="hero-down-text-right h-25 w-50">
               <div class="d-flex align-items-center btn menu-donate">
                 <h5 class="donate-text mt-1 text-nowrap">Donate Now </h5>
-                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mb-1" width="16px" height="10px" alt="">
+                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mb-1" width="16px" height="10px"
+                  alt="">
               </div>
             </div>
           </div>
-         
-          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 
+  <section class="stand-ukraine">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+
+        <div class="swiper-slide stand-uk-text">
+          <img src="/assets/img/stand-ukraine.png" class="img-fluid img-stand" alt="">
+          <span class="text-nowrap z-1">Support Ukraine</span>
+        </div>
+        <div class="swiper-slide stand-uk-text">Donate Now</div>
+        <div class="swiper-slide stand-uk-text">Support Ukraine</div>
+        <div class="swiper-slide stand-uk-text">Donate Now</div>
+        <div class="swiper-slide stand-uk-text">Support Ukraine</div>
+        <div class="swiper-slide stand-uk-text">Donate Now</div>
+        <div class="swiper-slide stand-uk-text">Support Ukraine</div>
+        <div class="swiper-slide stand-uk-text">Donate Now</div>
+        <div class="swiper-slide stand-uk-text">Support Ukraine</div>
+        <div class="swiper-slide stand-uk-text">Donate Now</div>
+        <div class="swiper-slide stand-uk-text">Support Ukraine</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="causes pb-5 mb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 d-flex align-items-center flex-column">
+          <h5 class="causes-title">Causes</h5>
+          <p class="causes-text">You Can Help Lots of People by <br>
+            Donating Little</p>
+          <div class="we-line causes-line-margin"></div>
+        </div>
+        <div class="swiper mt-5 pt-5 cauSwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide cause-swiper">
+              <div class="card">
+                <img src="assets/img/cau-card.png" class="card-img-top position-relative" alt="...">
+                <div class="swiper-category-img">
+                  <img src="assets/img/category.png" class="img-fluid" alt="" srcset="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Plant Tree, Save Earth & Lives Secure the Future</h5>
+                  <p class="card-text">Massa sed elementum tempus egestas sed sed <br> risus pretium quam. Bibendum
+                    neque egestas <br> congue quisque egestas diam.</p>
+                  <div class="hero-down-text-right h-25 ">
+                    <div class="d-flex align-items-center justify-content-center btn menu-donate">
+                      <h5 class="donate-text mt-1 text-nowrap">Donate Now </h5>
+                      <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mb-1" width="16px" height="10px"
+                        alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide cause-swiper">
+              <div class="card">
+                <img src="assets/img/cau-card.png" class="card-img-top position-relative" alt="...">
+                <div class="swiper-category-img">
+                  <img src="assets/img/category.png" class="img-fluid" alt="" srcset="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Plant Tree, Save Earth & Lives Secure the Future</h5>
+                  <p class="card-text">Massa sed elementum tempus egestas sed sed <br> risus pretium quam. Bibendum
+                    neque egestas <br> congue quisque egestas diam.</p>
+                  <div class="hero-down-text-right h-25 ">
+                    <div class="d-flex align-items-center justify-content-center btn menu-donate">
+                      <h5 class="donate-text mt-1 text-nowrap">Donate Now </h5>
+                      <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mb-1" width="16px" height="10px"
+                        alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide cause-swiper">
+              <div class="card">
+                <img src="assets/img/cau-card.png" class="card-img-top position-relative" alt="...">
+                <div class="swiper-category-img">
+                  <img src="assets/img/category.png" class="img-fluid" alt="" srcset="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Plant Tree, Save Earth & Lives Secure the Future</h5>
+                  <p class="card-text">Massa sed elementum tempus egestas sed sed <br> risus pretium quam. Bibendum
+                    neque egestas <br> congue quisque egestas diam.</p>
+                  <div class="hero-down-text-right h-25 ">
+                    <div class="d-flex align-items-center justify-content-center btn menu-donate">
+                      <h5 class="donate-text mt-1 text-nowrap">Donate Now </h5>
+                      <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mb-1" width="16px" height="10px"
+                        alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section class="watch-our-video">
+    <div class="watch-our-video"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="our-flex">
+            <h2 class="our-title">Watch Our Video</h2>
+            <p class="our-text">The Measure of a Life is not its <br> Duration, but its Donation</p>
+            <a href="#"><img src="assets/img/icons/play-btn.png" class="img-fluid mb-5" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="our-video-down-box">
+    <div class="row">
+      <div class="d-flex">
+        <div class="col-lg-3 grey-bg">
+          <img src="assets/img/our-video-grey-box.png" alt="" srcset="">
+        </div>
+        <div class="col-lg-3 white-bg">
+        </div>
+        <div class="col-lg-3 grey-bg">
+        </div>
+        <div class="col-lg-3 white-bg">
+
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="our-team">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h2 class="our-team-title">Our Team</h2>
+          <p class="our-team-text">Give a Hand to Make <br>
+            the Better World</p>
+          <div class="hero-line mb-4"></div>
+          <p>Malesuada nunc vel risus commodo viverra maecenas accumsan lacus. <br>
+            Netus et malesuada fames ac turpis egestas integer eget aliquet. Semper <br>
+            feugiat nibh sed pulvinar proin gravida hendrerit. Dictum non consectetur a <br>
+            erat nam at lectus.</p>
+          <div class="our-team-down-p d-flex p-3 me-5">
+            <div class="our-team-icon pe-3 ps-2">
+              <img src="assets/img/icons/our-vırgul.png" alt="">
+            </div>
+            <p class="down-p-our">Nisl tincidunt eget nullam non nisi est sit amet. Leo vel orci porta <br>
+              non pulvinar neque laoreet. Ante metus dictum at tempor <br> commodo ullamcorper.</p>
+          </div>
+          <div class="our-team-btn  mt-5">
+            <div class="d-flex align-items-center justify-content-center btn">
+              <h5 class="donate-text pt-3 text-nowrap">Be Volunteer</h5>
+              <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2" width="16px" height="10px" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="our-team-right-img-up position-relative">
+              <img src="assets/img/our-team-element.png" class="img-fluid our-team-element" alt="">
+            <img src="assets/img/our-team-ball.png" class="img-fluid" alt="">
+            <div class="our-team-right-img-down ">
+              <img src="assets/img/our-team.png" class="img-fluid mx-auto" alt="" srcset="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </section>
+  <script src="assets/js/package.json"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <script src="assets/js/main.js"></script>
+
+
 </body>
 
 </html>
