--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         </div>
         <div class="col-lg-6">
           <div class="our-team-right-img-up position-relative">
-              <img src="assets/img/our-team-element.png" class="img-fluid our-team-element" alt="">
+            <img src="assets/img/our-team-element.png" class="img-fluid our-team-element" alt="">
             <img src="assets/img/our-team-ball.png" class="img-fluid" alt="">
             <div class="our-team-right-img-down ">
               <img src="assets/img/our-team.png" class="img-fluid mx-auto" alt="" srcset="">
@@ -427,7 +427,97 @@
           </div>
         </div>
       </div>
+  </section>
 
+  <section class="testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="d-flex align-items-center justify-content-center flex-column">
+            <h5 class="testimo-title">Testimonials</h5>
+            <p class="testimo-text">What People Say about Our <br>
+              Organization</p>
+            <div class="testimonials-line mb-4"></div>
+          </div>
+          <div class="swiper mt-5 pt-5 cauSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide cause-swiper">
+                <div class="card p-2">
+                  <img src="assets/img/icons/stars.png" class="card-img-top img-fluid testimo-stars" alt="...">
+                  <div class="swiper-category-img">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text">Donec ac odio tempor orci dapibus ultrices <br>
+                      in iaculis nunc. Facilisis magna etiam <br>
+                      tempor orci eu lobortis. Faucibus interdum <br>
+                      posuere lorem ipsum.</p>
+                    <div class="d-flex align-items-center">
+                      <div class="testimo-people-img">
+                        <img src="assets/img/icons/testimo-people.png" class="img-fluid testimo-img-border me-3 "
+                          alt="">
+                      </div>
+                      <div class="testimo-people-text pt-4">
+                        <h5 class="testimo-peo-name">Leslie Johnson</h5>
+                        <p class="testimo-peo-text">Volunteer</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide cause-swiper">
+                <div class="card p-2">
+                  <img src="assets/img/icons/stars.png" class="card-img-top img-fluid testimo-stars" alt="...">
+                  <div class="swiper-category-img">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text">Donec ac odio tempor orci dapibus ultrices <br>
+                      in iaculis nunc. Facilisis magna etiam <br>
+                      tempor orci eu lobortis. Faucibus interdum <br>
+                      posuere lorem ipsum.</p>
+                    <div class="d-flex align-items-center">
+                      <div class="testimo-people-img">
+                        <img src="assets/img/icons/testimo-people.png" class="img-fluid testimo-img-border me-3 "
+                          alt="">
+                      </div>
+                      <div class="testimo-people-text pt-4">
+                        <h5 class="testimo-peo-name">Leslie Johnson</h5>
+                        <p class="testimo-peo-text">Volunteer</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide cause-swiper">
+                <div class="card p-2">
+                  <img src="assets/img/icons/stars.png" class="card-img-top img-fluid testimo-stars" alt="...">
+                  <div class="swiper-category-img">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text">Donec ac odio tempor orci dapibus ultrices <br>
+                      in iaculis nunc. Facilisis magna etiam <br>
+                      tempor orci eu lobortis. Faucibus interdum <br>
+                      posuere lorem ipsum.</p>
+                    <div class="d-flex align-items-center">
+                      <div class="testimo-people-img">
+                        <img src="assets/img/icons/testimo-people.png" class="img-fluid testimo-img-border me-3 "
+                          alt="">
+                      </div>
+                      <div class="testimo-people-text pt-4">
+                        <h5 class="testimo-peo-name">Leslie Johnson</h5>
+                        <p class="testimo-peo-text">Volunteer</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <script src="assets/js/package.json"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
