main page footer and footer down sections

--- a/index.html
+++ b/index.html
@@ -519,6 +519,222 @@
       </div>
     </div>
   </section>
+
+  <section class="better-world ">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 better-bg-col  shadow">
+          <p class="better-world-title">Act Now for a Better World</p>
+          <div class="better-text-btn d-flex justify-content-between">
+            <p class="better-world-text">Solutions to Help People in Need <br>
+              and Save the Planet</p>
+            <div class="our-team-btn ">
+              <div class="d-flex align-items-center justify-content-center btn">
+                <h5 class="donate-text pt-3 text-nowrap">Donate Now</h5>
+                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2" width="16px" height="10px"
+                  alt="">
+              </div>
+            </div>
+          </div>
+          <div class="better-world-line mt-4"></div>
+        </div>
+        <div class="col-lg-3 better-flex-down">
+          <h5 class="better-world-down-title pb-2">20M</h5>
+          <div class="better-world-line-down"></div>
+          <p class="better-world-down-text pt-2">Number of Supporters</p>
+        </div>
+        <div class="col-lg-3 better-flex-down">
+          <h5 class="better-world-down-title pb-2">15K+</h5>
+          <div class="better-world-line-down"></div>
+          <p class="better-world-down-text pt-2">Volunteers Worldwide</p>
+        </div>
+        <div class="col-lg-3 better-flex-down">
+          <h5 class="better-world-down-title pb-2">68K+</h5>
+          <div class="better-world-line-down"></div>
+          <p class="better-world-down-text pt-2">We've Helped Raise</p>
+        </div>
+        <div class="col-lg-3 better-flex-down">
+          <h5 class="better-world-down-title pb-2">10M+</h5>
+          <div class="better-world-line-down"></div>
+          <p class="better-world-down-text pt-2">Projects Funded</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="our-experince">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h5 class="experince-title">From Our Experince</h5>
+          <h2 class="experince-text">Read Our Latest News and Articles</h2>
+          <div class="our-experince-line"></div>
+        </div>
+        <div class="col-lg-7">
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner pt-5">
+              <div class="carousel-item active">
+                <img src="assets/img/experince-slider.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="slider-down-experince d-flex align-items-center">
+            <div class="slider-down-experince-date d-flex pe-3 align-content-center align-items-center">
+              <img src="assets/img/icons/experince-date.png" class="img-fluid experince-icons" alt="">
+              <p class="experince-date-text ps-1 pt-3 ">September 15, 2022</p>
+            </div>
+            <div class="slider-down-experince-commit d-flex align-items-center">
+              <img src="assets/img/icons/experince-commit.png" class="img-fluid experince-icons" alt="">
+              <p class="experince-date-text ps-1 pt-3">No Comments</p>
+            </div>
+          </div>
+
+          <div class="slider-down-experince-text">
+            <h5 class="pb-2 down-experince-title">5 Tips for Engaging Lapsed Volunteers</h5>
+            <div class="experince-line"></div>
+            <p class="pt-2 down-experince-text">Morbi tristique senectus et netus et malesuada fames ac. Facilisi etiam
+              dignissim diam quis enim <br>
+              lobortis scelerisque fermentum dui. Elementum eu facilisis sed odio morbi quis commodo odio. Tortor <br>
+              vitae purus faucibus ornare suspendisse sed nisi lacus sed.</p>
+          </div>
+        </div>
+        <div class="col-lg-5 pt-5">
+          <div class="container">
+            <div class="row">
+              <div class="experince-right-box">
+                <div class="col-lg-4 pb-2">
+                  <div class="experince-left-box d-flex">
+                    <img src="assets/img/experince-box.png" class="img-fluid experince-box-border" alt="">
+                    <div class="experince-right-box pe-5">
+                      <div class="slider-down-experince-date d-flex  pe-5 align-content-center align-items-center">
+                        <img src="assets/img/icons/experince-date.png" class="img-fluid experince-icons" alt="">
+                        <p class="experince-date-text  text-nowrap pt-3 right-box-text-padding ">September 15, 2022</p>
+                      </div>
+                      <p class="experince-right-box-title">The Largest <br> Contribution of a Non-Profit Organization to Humanity</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 ">
+                  <div class="experince-left-box d-flex">
+                    <img src="assets/img/experince-box.png" class="img-fluid experince-box-border" alt="">
+                    <div class="experince-right-box pe-5">
+                      <div class="slider-down-experince-date d-flex  pe-5 align-content-center align-items-center">
+                        <img src="assets/img/icons/experince-date.png" class="img-fluid experince-icons" alt="">
+                        <p class="experince-date-text  text-nowrap pt-3 right-box-text-padding ">September 15, 2022</p>
+                      </div>
+                      <p class="experince-right-box-title">HelpHub Provides an Increase in the Level of Education</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 pt-2">
+                  <div class="experince-left-box d-flex">
+                    <img src="assets/img/experince-box.png" class="img-fluid experince-box-border" alt="">
+                    <div class="experince-right-box pe-5">
+                      <div class="slider-down-experince-date d-flex  pe-5 align-content-center align-items-center">
+                        <img src="assets/img/icons/experince-date.png" class="img-fluid experince-icons" alt="">
+                        <p class="experince-date-text  text-nowrap pt-3 right-box-text-padding ">September 15, 2022</p>
+                      </div>
+                      <p class="experince-right-box-title">Volunteering and its Surprising Benefits</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="assets/img/Logo.svg" class="img-fluid pb-3" alt="">
+          <p>Porttitor eget dolor morbi non arcu risus quis. <br>
+             Morbi tristique senectus et netus et <br>
+              malesuada fames. Montes nascetur ridiculus <br>
+               mus mauris. Sollicitudin tempor id eu nisl. <br>
+                Massa enim nec dui nunc mattis.</p>
+                <div class="footer-social d-flex">
+                  <ul class="list-unstyled d-flex align-items-center">
+                    <li>
+                      <img src="assets/img/icons/footer-twitter.png" class="img-fluid pe-3" alt="">
+                    </li>
+                    <li>
+                      <img src="assets/img/icons/footer-instagram.png" class="img-fluid pe-3" alt="">
+                    </li>
+                    <li>
+                      <img src="assets/img/icons/footer-facebook.png" class="img-fluid pe-3" alt="">
+                    </li>
+                    <li>
+                      <img src="assets/img/icons/footer-youtube.png" class="img-fluid pe-3" alt="">
+                    </li>
+                  </ul>
+                </div>
+        </div>
+        <div class="col-lg-2">
+          <ul class="list-unstyled">
+            <li class="footer-quick-title">Quick links</li>
+            <li class="footer-quick-text pt-4">Causes</li>
+            <li class="footer-quick-text">About</li>
+            <li class="footer-quick-text">FAQ</li>
+            <li class="footer-quick-text">Our Team</li>
+            <li class="footer-quick-text">News</li>
+          </ul>
+        </div>
+        <div class="col-lg-2">
+          <ul class="list-unstyled">
+            <li>
+              <div class="d-flex align-items-center pb-3">
+                <img src="assets/img/icons/footer-phone.png" class="img-fluid footer-soci-phone me-1" alt="">
+                <div class="footer-links">
+                  <h5 class="footer-soci-text">+1-206-156 2849</h5>
+                   <h5 class="footer-soci-text">+1-333-205 0133</h5>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="d-flex align-items-center">
+                <img src="assets/img/icons/footer-mail.png" class="img-fluid footer-soci-phone me-1" alt="">
+                <div class="footer-links">
+                  <h5 class="footer-soci-text">info@helphub.com</h5>
+                   <h5 class="footer-soci-text">support@help.com</h5>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="d-flex align-items-center pt-3">
+                <img src="assets/img/icons/footer-location.png" class="img-fluid footer-soci-phone me-1" alt="">
+                <div class="footer-links">
+                  <h5 class="footer-soci-text">2464 Royal Ln. <br>
+                     Mesa, New Jersey</h5>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h5 class="footer-form-title">Subscribe to Our Newsletter</h5>
+          <p class="footer-form-down-text">Nulla at volutpat diam ut venenatis tellus in metus <br>
+             vulputate. Turpis in eu mi bibendum.</p>
+          <div class="footer-form d-flex">
+            <form action="" placeholder="Enter Email">
+              <input type="text" class="p-2 footer-input-border" placeholder="Enter Email"><br>
+            </form>
+            <div class="footer-btn btn ms-2">Send</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <section class="ft-bt mt-5 pt-5">
+    <div class="col-lg-12">
+      <div class="d-flex justify-content-center align-content-center ft-bottom-bg p-3">
+        <h5 class="footer-bottom-text" >Merkulove © 2022 HelpHub Template. All Rights Reserved.</h5>
+      </div>
+    </div>
+  </section>
   <script src="assets/js/package.json"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
