--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse d-flex align-content-center justify-content-center" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse d-lg-flex align-content-center justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
