--- a/faq.html
+++ b/faq.html
@@ -154,8 +154,9 @@
             <h5 class="faq-title-sec-1 pb-2">Need Help?</h5>
             <h5 class="faq-title-sec-2 pb-2 ">The Answers to All Your Questions</h5>
             <div class="faq-line-title"></div>
-            <p class="faq-title-sec-text pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br>
-               tempor incididunt ut labore. </p>
+            <p class="faq-title-sec-text pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              <br>
+              tempor incididunt ut labore. </p>
           </div>
 
           <div class="faq-content">
@@ -165,54 +166,173 @@
                   <h5 class="faq-content-title pb-2">Most Common Questions</h5>
                   <div class="faq-line-title"></div>
                   <p class="pt-3">Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. <br>
-                     Convallis a cras semper auctor neque vitae tempus quam. Sed adipiscing <br>
-                      diam donec adipiscing tristique risus nec feugiat.</p>
-                      <div class="faq-green-tick pt-3">
-                        <ul class="list-unstyled">
-                          <li class="pb-3">
-                            <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1 " alt="">
-                            <span class="faq-list-green">We will help you with the choice of fund</span> 
-                          </li>
-                          <li class="pb-3">
-                            <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1 pb-2" alt="">
-                            <span class="faq-list-green">Donor satisfaction is guaranteed</span> 
-                          </li>
-                          <li>
-                            <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1" alt="">
-                            <span class="faq-list-green">We help companies give well</span> 
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="faq-content-sup pt-4">
-                        <h5 class="faq-content-sup-title pb-2">Support</h5>
-                        <div class="faq-line-title"></div>
-                        <p class="pt-3">Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. <br>
-                           Tellus orci ac auctor augue mauris augue neque.</p>
-                      </div>
-                      <div class="faq-contact pt-3">
-                        <ul class="list-unstyled d-flex ">
-                          <li>
-                            <div class="d-flex align-items-center pb-3">
-                              <img src="assets/img/icons/faq-mail.png" class="img-fluid  me-1" alt="">
-                              <div class="footer-links ps-3">
-                                <h5 class="faq-content-icon-title">Email Address</h5>
-                                <h5 class="footer-soci-text">support@help.com</h5>
-                              </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="d-flex align-items-center ps-5">
-                              <img src="assets/img/icons/faq-phone.png" class="img-fluid " alt="">
-                              <div class="footer-links ps-3">
-                                <h5 class="faq-content-icon-title">Phone Number</h5>
-                                <h5 class="footer-soci-text">+1-206-156 2849/h5>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                      </div>
+                    Convallis a cras semper auctor neque vitae tempus quam. Sed adipiscing <br>
+                    diam donec adipiscing tristique risus nec feugiat.</p>
+                  <div class="faq-green-tick pt-3">
+                    <ul class="list-unstyled">
+                      <li class="pb-3">
+                        <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1 " alt="">
+                        <span class="faq-list-green">We will help you with the choice of fund</span>
+                      </li>
+                      <li class="pb-3">
+                        <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1 pb-2" alt="">
+                        <span class="faq-list-green">Donor satisfaction is guaranteed</span>
+                      </li>
+                      <li>
+                        <img src="assets/img/icons/yesil-tik.png" class="img-fluid pe-1" alt="">
+                        <span class="faq-list-green">We help companies give well</span>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="faq-content-sup pt-4">
+                    <h5 class="faq-content-sup-title pb-2">Support</h5>
+                    <div class="faq-line-title"></div>
+                    <p class="pt-3">Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. <br>
+                      Tellus orci ac auctor augue mauris augue neque.</p>
+                  </div>
+                  <div class="faq-contact pt-3">
+                    <ul class="list-unstyled d-flex ">
+                      <li>
+                        <div class="d-flex align-items-center pb-3">
+                          <img src="assets/img/icons/faq-mail.png" class="img-fluid  me-1" alt="">
+                          <div class="footer-links ps-3">
+                            <h5 class="faq-content-icon-title">Email Address</h5>
+                            <h5 class="footer-soci-text">support@help.com</h5>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="d-flex align-items-center ps-5">
+                          <img src="assets/img/icons/faq-phone.png" class="img-fluid " alt="">
+                          <div class="footer-links ps-3">
+                            <h5 class="faq-content-icon-title">Phone Number</h5>
+                            <h5 class="footer-soci-text">+1-206-156 2849/h5>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="col-lg-6"></div>
+                <div class="col-lg-6 p-5 ">
+                  <div class="accordion accordion-flush " id="accordionFlushExample">
+                    <div class="accordion-item ">
+                      <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed faq-bg-accordion text-white" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
+                          aria-controls="flush-collapseOne">
+                          How much time do I need to volunteer?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Neque laoreet suspendisse interdum consectetur libero. Lacinia quis
+                          <br>
+                          vel eros donec ac odio tempor. Massa tempor nec feugiat nisl pretium <br>
+                          fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
+                          amet cursus sit amet dictum sit amet.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed faq-bg-accordion  text-white" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                          aria-controls="flush-collapseTwo">
+                          How Will My Donation Be Used?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Neque laoreet suspendisse interdum consectetur libero. Lacinia quis
+                          <br>
+                          vel eros donec ac odio tempor. Massa tempor nec feugiat nisl pretium <br>
+                          fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
+                          amet cursus sit amet dictum sit amet.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed faq-bg-accordion  text-white" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
+                          aria-controls="flush-collapseThree">
+                          How Can I Apply for a Job with You?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Neque laoreet suspendisse interdum consectetur libero. Lacinia quis
+                          <br>
+                          vel eros donec ac odio tempor. Massa tempor nec feugiat nisl pretium <br>
+                          fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
+                          amet cursus sit amet dictum sit amet.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingFour">
+                        <button class="accordion-button collapsed faq-bg-accordion  text-white" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
+                          aria-controls="flush-collapseFour">
+                          How Can I Apply for a Job with You?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseFour" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Neque laoreet suspendisse interdum consectetur libero. Lacinia quis
+                          <br>
+                          vel eros donec ac odio tempor. Massa tempor nec feugiat nisl pretium <br>
+                          fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
+                          amet cursus sit amet dictum sit amet.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingFive">
+                        <button class="accordion-button collapsed faq-bg-accordion  text-white" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false"
+                          aria-controls="flush-collapseFive">
+                          How Can I Apply for a Job with You?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseFive" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Neque laoreet suspendisse interdum consectetur libero. Lacinia quis
+                          <br>
+                          vel eros donec ac odio tempor. Massa tempor nec feugiat nisl pretium <br>
+                          fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
+                          amet cursus sit amet dictum sit amet.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="faq-help-us">
+    <div class="container">
+      <div class="row">
+        <div class="d-flex flex-column align-items-center justify-content-center text-center">
+          <h5 class="faq-help-green-title pb-3">Help Us to Make Difference</h5>
+          <h5 class="faq-help-title pb-3">Let’s Stand for the People Who <br>
+            in Needs</h5>
+          <div class="faq-line-title"></div>
+          <p class="text-white pt-3">Viverra justo nec ultrices dui sapien eget mi. Nisl pretium fusce id velit ut tortor pretium. <br>
+            Sit amet aliquam id diam maecenas ultricies.</p>
+          <div class="faq-help-btn d-lg-flex justify-content-center">
+            <div class="our-team-btn  col-lg-6 me-4">
+              <div class="d-flex align-items-center justify-content-center btn">
+                <h5 class="donate-text pt-3 ">Donate Now</h5>
+                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2" width="16px" height="10px"
+                  alt="">
+              </div>
+            </div>
+            <div class="faq-help-btn-green   col-lg-6 ">
+              <div class="d-flex align-items-center justify-content-center btn ">
+                <h5 class="donate-text pt-3">Be Volunteer</h5>
+                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2" width="16px" height="10px"
+                  alt="">
               </div>
             </div>
           </div>
@@ -222,8 +342,6 @@
   </section>
 
 
-
-  
 
 
   <footer>
@@ -322,4 +440,5 @@
     crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
