--- a/faq.html
+++ b/faq.html
@@ -231,7 +231,7 @@
                           fusce id velit. Vestibulum lorem sed risus ultricies tristique nulla. Sit <br>
                           amet cursus sit amet dictum sit amet.</div>
                       </div>
-                    </div>
+                    </div> 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed faq-bg-accordion  text-white" type="button"
@@ -341,7 +341,21 @@
     </div>
   </section>
 
-
+  <section class="our-video-down-box">
+    <div class="row">
+      <div class="d-flex">
+        <div class="col-lg-3 grey-bg">
+          <img src="assets/img/our-video-grey-box.png" alt="" srcset="">
+        </div>
+        <div class="col-lg-3 white-bg">
+        </div>
+        <div class="col-lg-3 grey-bg">
+        </div>
+        <div class="col-lg-3 white-bg">
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <footer>
